# mi4u-tools-collection

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
book/: book.toml
book/src/: README.md  SUMMARY.md
config/: mkbook.toml
mtc/config/: Cargo.toml  README.md
mtc/config-derive/: Cargo.toml  README.md
mtc/config-derive/src/: lib.rs
mtc/config/configs/: app_config.toml  custom_config.toml  jsonformatconfig.json  test_config_1.toml  test_config_3.toml
mtc/config/src/: lib.rs
mtc/config/tests/: configuration_tests.rs
mtc/mkabook/: Cargo.toml
mtc/mkbook/: Cargo.toml
mtc/mkbook/assets/book/: book.toml
mtc/mkbook/assets/book/src/: README.md  SUMMARY.md
mtc/mkbook/assets/book/src/changelog/: 2025-04-23-init.md  2025-04-24-define-structure.md
mtc/mkbook/assets/book/src/pay2vault_config/: pay2vault_config.md
mtc/mkbook/assets/book/src/pay2vault_config_derive/: pay2vault_config_derive.md
mtc/mkbook/assets/book/src/pay2vault_prelude/: pay2vault_prelude.md
mtc/mkbook/assets/book/src/pay2vault_server/: pay2vault_server.md
mtc/mkbook/src/: lib.rs  main.rs
mtc/mkbook/src/configs/: bookconfig.rs  mkbook.rs  mod.rs
mtc/mkbook/src/tasks/: book.rs  ci.rs  mod.rs
mtc/neighbour/: Cargo.toml
mtc/toolbelt/: Cargo.toml  README.md
mtc/toolbelt/src/: cmd.rs  env_utils.rs  git.rs  lib.rs
