[package]
name="mtc-make-a-book"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
mtc-config.workspace=true
mtc-toolbelt.workspace=true
html2md.workspace=true
duct.workspace=true
man.workspace=true
xshell.workspace=true
serde.workspace=true
toml.workspace=true
# log teace
tracing.workspace=true
tracing-subscriber.workspace=true
clap.workspace=true
better_default.workspace=true
anyhow.workspace = true
[lints]
workspace = true
